test/files/invalid/union_variant_metadata.fbs
union MyUnion {
  Foo (custom_attr),
  Bar (deprecated),
}

table Foo { x: uint8; }
table Bar { x: uint8; }
